tests/verbatim_scanner/errors/unterminated_block.txxt
Error: "Unterminated verbatim block starting at line 2"
title:
    content without terminator
    more things
    
     
    
    

     
    
    

     
    
    

    
    
    

    moresome final line that is not a terminator
